--- a/12/12.ioc
+++ b/12/12.ioc
@@ -16,13 +16,16 @@ Mcu.IP1=MEMORYMAP
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP5=UART5
+Mcu.IPNb=6
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN (PH0)
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.Pin2=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=3
+Mcu.Pin1=PB5
+Mcu.Pin2=PB6
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin4=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -38,7 +41,14 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.UART5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PB5.Locked=true
+PB5.Mode=Asynchronous
+PB5.Signal=UART5_RX
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=UART5_TX
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PinOutPanel.RotationAngle=0
@@ -72,7 +82,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_UART5_Init-UART5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
