--- a/12/12.ioc
+++ b/12/12.ioc
@@ -4,6 +4,45 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+Dma.Request0=UART5_RX
+Dma.Request1=UART5_TX
+Dma.RequestsNb=2
+Dma.UART5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART5_RX.0.EventEnable=DISABLE
+Dma.UART5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_RX.0.Instance=DMA1_Stream0
+Dma.UART5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART5_RX.0.Mode=DMA_CIRCULAR
+Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART5_RX.0.RequestNumber=1
+Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART5_RX.0.SignalID=NONE
+Dma.UART5_RX.0.SyncEnable=DISABLE
+Dma.UART5_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART5_RX.0.SyncRequestNumber=1
+Dma.UART5_RX.0.SyncSignalID=NONE
+Dma.UART5_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART5_TX.1.EventEnable=DISABLE
+Dma.UART5_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_TX.1.Instance=DMA1_Stream1
+Dma.UART5_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART5_TX.1.Mode=DMA_NORMAL
+Dma.UART5_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART5_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART5_TX.1.RequestNumber=1
+Dma.UART5_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART5_TX.1.SignalID=NONE
+Dma.UART5_TX.1.SyncEnable=DISABLE
+Dma.UART5_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART5_TX.1.SyncRequestNumber=1
+Dma.UART5_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -12,12 +51,13 @@ MMTConfigApplied=false
 Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=MEMORYMAP
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=UART5
-Mcu.IPNb=6
+Mcu.IP1=DMA
+Mcu.IP2=MEMORYMAP
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=UART5
+Mcu.IPNb=7
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN (PH0)
@@ -32,6 +72,8 @@ Mcu.UserName=STM32H743VITx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -82,7 +124,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_UART5_Init-UART5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
